--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meat name="viewport" content="width = device-width initial-scale=1">
         <title>Lotto</title>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <header class="center">
@@ -11,23 +13,23 @@
             <h2>Play to win</h2>    
         </header>
         <main class="center">
-            <span class="number">0</span>
-            <span class="number">0</span>
-            <span class="number">0</span>
-            <span class="number">0</span>
-            <span class="number">0</span>
-            <span class="number">0</span>
+            <span class="number" id="n1">X</span>
+            <span class="number" id="n2">X</span>
+            <span class="number" id="n3">X</span>
+            <span class="number" id="n4">X</span>
+            <span class="number" id="n5">X</span>
+            <span class="number" id="n6">X</span>
             <br>
-            <b style="font-size: 30px;">Bonus:</b>
-            <span class="number bonusNumber">0</span>
+            <b id="bonus" >Bonus:</b>
+            <span class="number bonusNumber" id="bn">X</span>
             <br>
             <button id="genButton">Click to Play!</button>
         </main>
         <footer>
             <nav>Contact info</nav>
-                <a href="https://github.com/DespinaChrist"><img class="logo" src="img/github.svg" alt="Github" ></a>
-                <a href="DespinaChristod@gmail.com"><img class="logo" src="img/email.png" alt="Email" ></a>
-                <a href="https://www.linkedin.com/in/despoina-christodoulou-624776225"><img class="logo" src="img/linkedin.svg" alt="LinkedIn" ></a>
+                <a href="https://github.com/DespinaChrist" target="_blank"><img class="logo" src="img/github.svg" alt="Github" ></a>
+                <a href="https://www.linkedin.com/in/despoina-christodoulou-624776225" target="_blank"><img class="logo" src="img/linkedin.svg" alt="LinkedIn" ></a>
+                <a href="mailto:DespinaChristod@gmail.com" target="_blank"><img class="logo" src="img/email.png" alt="Email" ></a>
         </footer>
     </body>
 </html>
