--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meat name="viewport" content="width = device-width initial-scale=1">
+        <meta name="viewport" content="width = device-width initial-scale=4">
         <title>Lotto</title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
     </head>
     <body>
         <header class="center">
@@ -13,15 +12,16 @@
             <h2>Play to win</h2>    
         </header>
         <main class="center">
-            <span class="number" id="n1">X</span>
-            <span class="number" id="n2">X</span>
-            <span class="number" id="n3">X</span>
-            <span class="number" id="n4">X</span>
-            <span class="number" id="n5">X</span>
-            <span class="number" id="n6">X</span>
+            <span class="number" id="n1">__</span>
+            <span class="number" id="n2">__</span>
+            <span class="number" id="n3">__</span>
+            <br>
+            <span class="number" id="n4">__</span>
+            <span class="number" id="n5">__</span>
+            <span class="number" id="n6">__</span>
             <br>
             <b id="bonus" >Bonus:</b>
-            <span class="number bonusNumber" id="bn">X</span>
+            <span class="number bonusNumber" id="bn">__</span>
             <br>
             <button id="genButton">Click to Play!</button>
         </main>
@@ -31,5 +31,6 @@
                 <a href="https://www.linkedin.com/in/despoina-christodoulou-624776225" target="_blank"><img class="logo" src="img/linkedin.svg" alt="LinkedIn" ></a>
                 <a href="mailto:DespinaChristod@gmail.com" target="_blank"><img class="logo" src="img/email.png" alt="Email" ></a>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
